[closes #433] Replace Service interface with an abstract class